--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>TerraGarden - Barrio Cerrado</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
     <header class="encabezado">
         <img src="./img/terragarden-logo-ok.png" class="logo" alt="Logo TerraGarden">
         <div>
-            <a href="https://es-la.facebook.com/" target="_blank"><img src="./img/facebook.png"
-                    alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png"
-                    alt="Icono Instagram"><a>
-                    <a href="https://twitter.com/?lang=es" target="_blank"><img src="./img/twitter.png"
-                            alt="Icono Twitter"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Icono Instagram"><a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="./img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,9 +45,9 @@
             <div>
                 <h2>¿QUIÉNES SOMOS?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorum repudiandae similique. Tempora
-                    dignissimos maxime ad, quidem consequatur asperiores! Laboriosam, non. Dolorem vitae, autem error
-                    consectetur, eius et laborum veritatis, aliquid voluptas neque facilis delectus! Qui molestias velit
-                    odio at.hgdyu hfyeih jkieori hqiurieo que donde podras disfrutar con tu</p>
+                dignissimos maxime ad, quidem consequatur asperiores! Laboriosam, non. Dolorem vitae, autem error
+                consectetur, eius et laborum veritatis, aliquid voluptas neque facilis delectus! Qui molestias velit
+                odio at.hgdyu hfyeih jkieori hqiurieo que donde podras disfrutar con tu</p>
             </div>
         </section>
         <section class="opciones">
@@ -117,13 +112,11 @@
         </div>
         <div>
             <a href="https://es-la.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Icono Instagram"><a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Icono Instagram"></a>
             <a href="https://twitter.com/?lang=es" target="_blank"><img src="./img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </footer>
     <!--Bootstrap Js-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
