--- a/pages/nuestrasopciones.html
+++ b/pages/nuestrasopciones.html
@@ -40,7 +40,9 @@
             <div class="propuestas-contenedor-uno">
                 <div>
                     <h2>Lotes TerraGarden GOLF</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas dolore unde cumque distinctio, nostrum amet minima itaque iusto facilis perspiciatis voluptatum magnam sit, repellat maiores tenetur dolores veritatis hic quidem. Sunt sed architecto necessitatibus?</p>
+                    <p>Estos lotes varían entre los 1500 a 2500 M². Vistas exclusivas a las zonas deportivas y espacios verdes. Muchos de estos lotes disfrutan de las vistas a las Canchas de Golf como una extensión de su propio terreno.
+                    <br>
+                    Financiación accesible.</p>
                     <a href="./contacto.html">ME INTERESA</a>
                 </div>
                 <img src="../img/canchadegolf.jpg" alt="">
@@ -48,7 +50,9 @@
             <div class="propuestas-contenedor-dos">
                 <div>
                     <h2>Lotes TerraGarden BOSQUE</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo saepe maiores sapiente quam, sequi vero incidunt corporis alias consectetur amet porro dignissimos numquam? Hic dicta, aliquid quod quam voluptas quaerat reprehenderit et odit voluptatibus laborum?</p>
+                    <p>Amplios lotes que varían entre los 1200 a 2000 M². Estos lotes se caracterizan por estar inmersos en un entorno de añosa forestación centenaria, donde se experimenta a otro nivel la vida al aire libre y puro.
+                    <br>
+                    Financiación accesible.</p>
                     <a href="./contacto.html">ME INTERESA</a>
                 </div>
                 <img src="../img/vistasectorbosque.jpg" alt="">
@@ -56,7 +60,9 @@
             <div class="propuestas-contenedor-tres">
                 <div>
                     <h2>Lotes TerraGarden LAGUNA</h2>
-                    <p>Lorem sum dolor sit amet consectetur adipisicing elit. Totam asperiores delectus quia quos eligendi aut dolorum porro! Tempora ipsa sequi saepe dicta voluptatum laborum sint eligendi non eaque illum voluptate sapiente quisquam, harum explicabo molestiae.</p>
+                    <p>Lotes con bajadas exclusivas a las amplias lagunas con las que cuenta el barrio. Si tu vida está ligada a los deportes náuticos o simplemente querés disfrutar de hermosas vistas, éstos lotes son tu mejor opción. Lotes desde 1300 a 2200 M²
+                    <br>
+                    Financiación accesible.</p>
                     <a href="./contacto.html">ME INTERESA</a>
                 </div>
                 <img src="../img/vistalagunatres.jpg" alt="">
