--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -36,7 +36,7 @@
     <main>
         <section class="servicios">
             <h1>Instalaciones</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi rem quia quibusdam mollitia, officia debitis ipsam quaerat ab sit dolores?</p>
+            <p>TerraGarden cuenta con múltiples alternativas para cada miembro de la familia...</p>
             <div class="contenedor-uno">
                 <img src="../img/clubhouse.jpg" alt="">
                 <ul>
@@ -45,10 +45,12 @@
                     <li>Canchas de Golf</li>
                     <li>Canchas de Tenis, Futbol y Paddle</li>
                     <li>Pileta Olimpica</li>
+                    <li>Deportes Náuticos</li>
+                    <li>Circuito Aeróbico "Bosque"</li>
                 </ul>
             </div>    
             <h2>Infraestructura</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis animi provident doloribus quasi earum, quidem quibusdam debitis ex velit cupiditate.</p>
+            <p>Para que tu vida sea más simple pero con todas las comodidades, TerraGarden cuenta con:</p>
             <div class="contenedor-dos">
                 <img src="../img/infraestructura.jpg" alt="">
                 <ul>
@@ -57,7 +59,7 @@
                     <li>Agua potable</li>
                     <li>Red de gas natural</li>
                     <li>Avenidas y calles pavimentadas</li>
-                    <li>Cloacas y plantas de tratamientos de desechos</li>
+                    <li>Plantas de tratamientos de desechos</li>
                     <li>Fibra Optica</li>
                 </ul>
             </div> 
@@ -78,12 +80,12 @@
                 <img src="../img/vistacanchafutbol.jpg" alt="">
                 <img src="../img/vistagolf.jpg" class="tercera" alt="">
                 <img src="../img/vistacanchatenis.jpg" class="cuarta" alt="">
-                <img src="../img/piscina.jpg" alt="">
+                <img src="../img/piscina.jpg" class="quinta" alt="">
                 <img src="../img/vistalagunatres.jpg" class="sexta" alt="">
                 <img src="../img/piscina-tres.jpg" alt="">
                 <img src="../img/canchadegolf.jpg" alt="">
                 <img src="../img/canchasdetenis.jpg" alt="">
-                <img src="../img/vistasectorbosque.jpg" alt="">
+                <img src="../img/vistasectorbosque.jpg" class="decima" alt="">
             </div>
         </section>
     </main>
