--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         <section class="nosotros">
             <div>
                 <h2>¿QUIÉNES SOMOS?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorum repudiandae similique. Tempora
-                dignissimos maxime ad, quidem consequatur asperiores! Laboriosam, non. Dolorem vitae, autem error
-                consectetur, eius et laborum veritatis, aliquid voluptas neque facilis delectus! Qui molestias velit
-                odio at.hgdyu hfyeih jkieori hqiurieo que donde podras disfrutar con tu</p>
+                <p>TerraGarden es nuestro más reciente proyecto, pensado con el objetivo de lograr un lugar único, donde toda la familia pueda disfrutar de un ambiente natural y tranquilo. 
+                <br>
+                TerraGarden es la combinación perfecta entre la vida de campo, el deporte y el compromiso con el que llevamos adelante cada uno de nuestros proyectos. Hacé de TerraGarden, tu hogar...</p>
             </div>
         </section>
         <section class="opciones">
@@ -74,16 +73,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <P>"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque natus tempora dolore ut porro
-                        rerum" Juan Ignacio - Lote N°288</P>
+                        <P>"El deporte es parte de mi vida, y en TerraGarden encontré todo lo que buscaba en un sólo lugar" Juan Ignacio - Lote N°288</P>
                     </div>
                     <div class="carousel-item">
-                        <P>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem ipsa quia ipsam excepturi
-                        numquam quibusdam facere" Helena - Lote N°670</P>
+                        <P>"Nos enamoramos de los inmensos espacios verdes que ofrece TerraGarden" Helena - Lote N°670</P>
                     </div>
                     <div class="carousel-item">
-                        <P>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, dolorem quis. Ab modi vel
-                        voluptates" Esteban y Alejandra - Lote N°405</P>
+                        <P>"Todo lo que proyectamos para la crianza de nuestros hijos, lo encontramos en este lugar." Esteban y Alejandra - Lote N°405</P>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
