--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,31 +38,34 @@
             <h1>Contactanos</h1>
             <p>Completá el formulario y coordiná tu visita con un asesor. Te esperamos!!!</p>
             <form class="formulario-contenedor">
-                <div>
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" name="nombre" id="nombre">
+                <div class="primero">
+                    <div>
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" name="nombre" id="nombre">
+                    </div>
+                    <div>
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" name="apellido" id="apellido">
+                    </div>
+                    <div>
+                        <label for="email">E-mail:</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div>
+                        <label for="telefono">Teléfono:</label>
+                        <input type="tel" name="tel" id="tel">
+                    </div>
                 </div>
-                <div>
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" name="apellido" id="apellido">
-                </div>
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email">
-                </div>
-                <div>
-                    <label for="telefono">Teléfono:</label>
-                    <input type="tel" name="tel" id="tel">
-                </div>
-                <div>
+                <div class="segundo">
                     <h2>Envianos tu mensaje</h2>
-                    <textarea name="" id="" cols="50" rows="10"></textarea>
-                </div>
-                <div>
-                    <input type="submit">
-                    <input type="reset">
+                    <textarea name="" id="" cols="35" rows="10"></textarea>
+                    <div>
+                        <input type="submit">
+                        <input type="reset">
+                    </div>
                 </div>
             </form>
+            </div>
         </section>
     </main>
     <footer class="pie">
