--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -36,7 +36,9 @@
     </nav>
     <main class="ubicacion">
         <h1>Ubicación</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit non earum eos tempora, deleniti omnis cumque nulla aliquid exercitationem. Porro voluptate qui voluptatibus vel eos fugit? Error voluptatum deserunt delectus?</p>
+        <p>TerraGarden tiene una ubicación privilegiada, nos encontramos en el Corredor Verde “Canning-San Vicente”, a tan sólo 50 minutos de Capital Federal y a menos de 20 minutos de la ciudad de La Plata.
+        <br>
+        Vení a conocernos!!!</p>
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d36960.24199046475!2d-58.450367956258674!3d-35.03536424951396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDAxJzA1LjUiUyA1OMKwMjgnMDUuNyJX!5e0!3m2!1ses!2sar!4v1682729883959!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <a href="./contacto.html" class="boton">PROGRAMÁ TU VISITA</a>
