ultimos cambios pre-entrega

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
+    <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
+    <title>TerraGarden | Barrio Cerrado - Servicios e Instalaciones</title>
 </head>
 <body>
     <header class="encabezado">
         <img src="../img/terragarden-logo-ok.png" class="logo" alt="Logo TerraGarden">
         <div>
-            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logofacebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="logoinstagram"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="logotwitter"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,7 +42,7 @@
             <h1>Instalaciones</h1>
             <p>TerraGarden cuenta con múltiples alternativas para cada miembro de la familia...</p>
             <div class="contenedor-uno">
-                <img src="../img/clubhouse.jpg" alt="">
+                <img src="../img/clubhouse.jpg" alt="Vista Club House">
                 <ul>
                     <li>Club House</li>
                     <li>Club Gourmet TerraGarden</li>
@@ -52,7 +56,7 @@
             <h2>Infraestructura</h2>
             <p>Para que tu vida sea más simple pero con todas las comodidades, TerraGarden cuenta con:</p>
             <div class="contenedor-dos">
-                <img src="../img/infraestructura.jpg" alt="">
+                <img src="../img/infraestructura.jpg" alt="Vista al Barrio">
                 <ul>
                     <li>Iluminación</li>
                     <li>Red Subterranea</li>
@@ -76,16 +80,16 @@
         <section class="fotos">
             <h2>GALERÍA DE FOTOS</h2>
             <div class="fotos-contenedor">
-                <img src="../img/vistalagunados.jpg" class="primera" alt="">
-                <img src="../img/vistacanchafutbol.jpg" alt="">
-                <img src="../img/vistagolf.jpg" class="tercera" alt="">
-                <img src="../img/vistacanchatenis.jpg" class="cuarta" alt="">
-                <img src="../img/piscina.jpg" class="quinta" alt="">
-                <img src="../img/vistalagunatres.jpg" class="sexta" alt="">
-                <img src="../img/piscina-tres.jpg" alt="">
-                <img src="../img/canchadegolf.jpg" alt="">
-                <img src="../img/canchasdetenis.jpg" alt="">
-                <img src="../img/vistasectorbosque.jpg" class="decima" alt="">
+                <img src="../img/vistalagunados.jpg" class="primera" alt="Laguna">
+                <img src="../img/vistacanchafutbol.jpg" alt="Cancha de Futbol">
+                <img src="../img/vistagolf.jpg" class="tercera" alt="Cancha de Golf">
+                <img src="../img/vistacanchatenis.jpg" class="cuarta" alt="Cancha de Tenis">
+                <img src="../img/piscina.jpg" class="quinta" alt="Piscina Olímpica">
+                <img src="../img/vistalagunatres.jpg" class="sexta" alt="Laguna">
+                <img src="../img/piscina-tres.jpg" alt="Piscina Olímpica">
+                <img src="../img/canchadegolf.jpg" alt="Cancha de Golf">
+                <img src="../img/canchasdetenis.jpg" alt="Canchas de Tenis">
+                <img src="../img/vistasectorbosque.jpg" class="decima" alt="Vista Arboleda">
             </div>
         </section>
     </main>
