--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>TerraGarden - Barrio Cerrado</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
+    <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
+    <title>TerraGarden | Barrio Cerrado - Ubicación</title>
 </head>
 <body>
     <header class="encabezado">
         <img src="../img/terragarden-logo-ok.png" class="logo" alt="Logo TerraGarden">
         <div>
-            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logofacebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="logoinstagram"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="logotwitter"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,13 +38,15 @@
         </div>
     </nav>
     <main class="ubicacion">
-        <h1>Ubicación</h1>
-        <p>TerraGarden tiene una ubicación privilegiada, nos encontramos en el Corredor Verde “Canning-San Vicente”, a tan sólo 50 minutos de Capital Federal y a menos de 20 minutos de la ciudad de La Plata.
-        <br>
-        Vení a conocernos!!!</p>
+        <div>
+            <h1>Ubicación</h1>
+            <p>TerraGarden tiene una ubicación privilegiada, nos encontramos en el Corredor Verde “Canning-San Vicente”, a tan sólo 50 minutos de Capital Federal y a menos de 20 minutos de la ciudad de La Plata.
+            <br>
+            Vení a conocernos!!!</p>
+        </div>
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d36960.24199046475!2d-58.450367956258674!3d-35.03536424951396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDAxJzA1LjUiUyA1OMKwMjgnMDUuNyJX!5e0!3m2!1ses!2sar!4v1682729883959!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <a href="./contacto.html" class="boton">PROGRAMÁ TU VISITA</a>
+            <a href="./contacto.html">PROGRAMÁ TU VISITA</a>
         </div>
     </main>
     <footer class="pie">
@@ -55,9 +60,9 @@
             </ul>
         </div>
         <div>
-            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logofacebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="logoinstagram"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="logotwitter"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
