--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,17 @@
     <!---Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>TerraGarden - Barrio Cerrado</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
+    <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
+    <!--Protocolo Open Graph
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="TerraGarden - Barrio Cerrado - Venta de Lotes">
+    <meta property="og:url" content="www.">
+    <meta property="og:image" content="www.">
+    <meta property="og:description" content="">-->
+    <title>TerraGarden | Barrio Cerrado - Venta de Lotes</title>
 </head>
 <body>
     <header class="encabezado">
