--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
+    <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
+    <title>TerraGarden | Barrio Cerrado - Contacto</title>
 </head>
 <body>
     <header class="encabezado">
         <img src="../img/terragarden-logo-ok.png" class="logo" alt="Logo TerraGarden">
         <div>
-            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logofacebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="logoinstagram"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="logotwitter"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -79,9 +83,9 @@
             </ul>
         </div>
         <div>
-            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logofacebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="logoinstagram"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="logotwitter"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
