--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,12 @@
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
     <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
+    <!--Protocolo Open Graph-->
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="TerraGarden | Barrio Cerrado - Contacto">
+    <meta property="og:url" content="www.">
+    <meta property="og:image" content="www.">
+    <meta property="og:description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
     <title>TerraGarden | Barrio Cerrado - Contacto</title>
 </head>
 <body>
@@ -40,16 +46,12 @@
     <main>
         <section class="formulario">
             <h1>Contactanos</h1>
-            <p>Completá el formulario y coordiná tu visita con un asesor. Te esperamos!!!</p>
+            <p>Completá el formulario y coordiná tu visita con un asesor. ¡Te esperamos!</p>
             <form class="formulario-contenedor">
                 <div class="primero">
                     <div>
-                        <label for="nombre">Nombre:</label>
+                        <label for="nombre">Nombre Completo:</label>
                         <input type="text" name="nombre" id="nombre">
-                    </div>
-                    <div>
-                        <label for="apellido">Apellido:</label>
-                        <input type="text" name="apellido" id="apellido">
                     </div>
                     <div>
                         <label for="email">E-mail:</label>
@@ -69,7 +71,6 @@
                     </div>
                 </div>
             </form>
-            </div>
         </section>
     </main>
     <footer class="pie">
