--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -10,6 +10,12 @@
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
     <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
+    <!--Protocolo Open Graph-->
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="TerraGarden | Barrio Cerrado - Ubicación">
+    <meta property="og:url" content="www.">
+    <meta property="og:image" content="www.">
+    <meta property="og:description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
     <title>TerraGarden | Barrio Cerrado - Ubicación</title>
 </head>
 <body>
