--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!---Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <meta name="keywords" content="barrio cerrado, venta de lotes, terragarden, corredor verde, vida de campo, golf, deporte, espacios verdes, entorno natural, amenities, calidad de vida">
     <meta name="description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
-    <!--Protocolo Open Graph
+    <!--Protocolo Open Graph-->
     <meta property="og:type" content="Web Site">
-    <meta property="og:title" content="TerraGarden - Barrio Cerrado - Venta de Lotes">
+    <meta property="og:title" content="TerraGarden | Barrio Cerrado - Venta de Lotes">
     <meta property="og:url" content="www.">
     <meta property="og:image" content="www.">
-    <meta property="og:description" content="">-->
+    <meta property="og:description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
     <title>TerraGarden | Barrio Cerrado - Venta de Lotes</title>
 </head>
 <body>
@@ -46,13 +45,13 @@
     </nav>
     <main>
         <section class="hero">
-            <h1>Familia, naturaleza, tranquilidad, deporte... TerraGarden, calidad de vida.</h1>
+            <h1 class="animate__animated animate__fadeInLeft">Familia, naturaleza, tranquilidad, deporte... TerraGarden, calidad de vida.</h1>
             <a href="./pages/contacto.html">PROGRAMÁ UNA VISITA</a>
         </section>
         <section class="nosotros">
             <div>
                 <h2>¿QUIÉNES SOMOS?</h2>
-                <p>TerraGarden es nuestro más reciente proyecto, pensado con el objetivo de lograr un lugar único, donde toda la familia pueda disfrutar de un ambiente natural y tranquilo. 
+                <p>TerraGarden es nuestro más reciente proyecto, pensado con el objetivo de lograr un lugar único, donde toda la familia pueda disfrutar de un ambiente natural y tranquilo.
                 <br>
                 TerraGarden es la combinación perfecta entre la vida de campo, el deporte y el compromiso con el que llevamos adelante cada uno de nuestros proyectos. Hacé de TerraGarden, tu hogar...</p>
             </div>
@@ -79,7 +78,7 @@
         </section>
         <section class="testimonios">
             <h2>QUIENES CONFIARON EN NOSOTROS...</h2>
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <P>"El deporte es parte de mi vida, y en TerraGarden encontré todo lo que buscaba en un sólo lugar" Juan Ignacio - Lote N°288</P>
@@ -91,16 +90,6 @@
                         <P>"Todo lo que proyectamos para la crianza de nuestros hijos, lo encontramos en este lugar." Esteban y Alejandra - Lote N°405</P>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </section>
     </main>
@@ -120,7 +109,6 @@
             <a href="https://twitter.com/?lang=es" target="_blank"><img src="./img/twitter.png" alt="Icono Twitter"></a>
         </div>
     </footer>
-    <!--Bootstrap Js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
