proyecto final-con open graph

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,8 +13,8 @@
     <!--Protocolo Open Graph-->
     <meta property="og:type" content="Web Site">
     <meta property="og:title" content="TerraGarden | Barrio Cerrado - Servicios e Instalaciones">
-    <meta property="og:url" content="www.">
-    <meta property="og:image" content="www.">
+    <meta property="og:url" content="https://terragarden.netlify.app/">
+    <meta property="og:image" content="https://terragarden.netlify.app/img/terragarden-logo-ok.png">
     <meta property="og:description" content="Venta de lotes en barrio cerrado. Múltiples alternativas para toda tu familia. Entorno natural y tranquilo. Elegí calidad de vida, elegí TerraGarden.">
     <title>TerraGarden | Barrio Cerrado - Servicios e Instalaciones</title>
 </head>
